# tracker

./: .gitignore  CMakeLists.txt  README.md  tracker.ini  windows_generate_solution.bat  windows_package_release.bat
src/: change_task_panel.h  dropdown.cpp  dropdown.h  editor_widget.cpp  editor_window.cpp  editor_window.h  exc.h  human_text.cpp  human_text.h  inactivity.cpp  inactivity.h  inter_process_wakeup.cpp  inter_process_wakeup.h  logged_task_editor_dialog.cpp  logged_task_editor_dialog.h  main.cpp  math_utils.h  settings_dialog.cpp  settings_dialog.h  string_util.cpp  string_util.h  task_entry_widget.cpp  task_entry_widget.h  task_entry_window.cpp  task_entry_window.h  task_list.cpp  task_list_editor_widget.cpp  task_list_editor_widget.h  task_list_editor_window.cpp  task_list_editor_window.h  time_utils.h  tracked_task_completer.cpp  tracked_task_item_delegate.cpp  tracked_task_line_edit.cpp  tracked_task_line_edit.h  tracked_tasks_list_model.cpp  tracked_tasks_list_model.h  tracker.cpp  tracker_ipc.cpp  tracker_ipc.h  (+4 more)
viewer_src/: _moc_editor_window.cpp  _moc_logged_task_editor_dialog.cpp  _moc_settings_dialog.cpp  _moc_task_entry_widget.cpp  _moc_task_entry_window.cpp  _moc_task_week_editor.cpp  _moc_user_settings.cpp  editor_widget.h  editor_window.cpp  editor_window.h  idle_input_time.h  logged_task_editor_dialog.h  logged_tasks_time_series_pane.cpp  logged_tasks_time_series_pane.h  main.cpp  make_mocs.bat  settings_dialog.cpp  string_util.cpp  string_util.h  task_combo_box.h  task_entry_widget.cpp  task_entry_widget.h  task_entry_window.cpp  task_entry_window.h  task_list.cpp  task_list.h  task_week_editor.cpp  task_week_editor.h  time_series_pane.cpp  time_series_pane.h  tracked_task_completer.cpp  tracked_task_completer.h  tracked_task_item_delegate.cpp  tracked_task_item_delegate.h  tracked_task_line_edit.cpp  tracked_tasks_list_model.cpp  tracked_tasks_list_model.h  tracker_file_reader.cpp  tracker_file_reader.h  user_settings.cpp  (+4 more)
